Update Navbar onScroll

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <li><a href="#zhongli">Morax</a></li>
         <li><a href="#raiden">Beelzebul</a></li>
         <li><a href="#nahida">Buer</a></li>
-        <li><a href="#">Focalor</a></li>
+        <li><a href="#furina">Focalor</a></li>
       </ul>
     </nav>
     <main>
@@ -87,236 +87,238 @@
           </div>
         </div>
       </article>
-      <article class="venti" id="venti">
-        <section class="figure-venti">
-          <div class="image-character">
-            <img src="image/venti.png" alt="venti" srcset="" />
-          </div>
-          <div class="venti-name">
-            <h3>Venti</h3>
-            <div class="venti-title"><p>Winborne Bard</p></div>
-            <p>One of the many bards of Mondstadt, who freely wanders the city's streets and alleys.</p>
-          </div>
-        </section>
-        <section class="details-venti">
-          <h3 class="venti-ideal">God of Freedom</h3>
-          <div class="desc">
-            <p>Known As</p>
-            <div class="known-venti">
-              <p>Barbatos</p>
-              <p>Lord Barbatos</p>
-              <p>Singer of The Skyward Sonnets</p>
+      <section id="content">
+        <article class="venti" id="venti">
+          <section class="figure-venti">
+            <div class="image-character">
+              <img src="image/venti.png" alt="venti" srcset="" />
             </div>
-          </div>
-          <h3>Introduction</h3>
-          <div>
-            <p>
-              A bard that seems to have arrived on some unknown wind — sometimes sings songs as old as the hills, and other times sings poems fresh
-              and new. Likes apples and lively places but is not a fan of cheese or anything sticky. When using his Anemo power to control the wind,
-              it often appears as feathers, as he's fond of that which appears light and breezy.
-            </p>
-          </div>
-          <h3>Trailer</h3>
-          <div class="video">
-            <iframe
-              src="https://www.youtube.com/embed/M9kQP-cmipY"
-              title="Character Teaser: The Four Winds (English Version) | Genshin Impact"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen
-            ></iframe>
-          </div>
-        </section>
-      </article>
-      <article class="zhongli" id="zhongli">
-        <section class="figure-zhongli">
-          <div class="image-character">
-            <img src="image/zhongli.png" alt="zhongli" srcset="" />
-          </div>
-          <div class="zhongli-name">
-            <h3>Zhongli</h3>
-            <div class="zhongli-title"><p>Vago Mundo</p></div>
-            <p>A mysterious expert contracted by the Wangsheng Funeral Parlor. Extremely knowledgeable in all things.</p>
-          </div>
-        </section>
-        <section class="details-zhongli">
-          <h3 class="zhongli-ideal">God of Contract</h3>
-          <div class="desc-zhongli">
-            <p>Known As</p>
-            <div class="known-zhongli">
-              <p>Morax</p>
-              <p>Wangsheng Funeral Parlor Consultant</p>
+            <div class="venti-name">
+              <h3>Venti</h3>
+              <div class="venti-title"><p>Winborne Bard</p></div>
+              <p>One of the many bards of Mondstadt, who freely wanders the city's streets and alleys.</p>
             </div>
-          </div>
-          <h3>Introduction</h3>
-          <div>
-            <p>
-              Wangsheng Funeral Parlor's mysterious consultant. Handsome, elegant, and surpassingly learned. Though no one knows where Zhongli is
-              from, he is a master of courtesy and rules. From his seat at Wangsheng Funeral Parlor, he performs all manner of rituals.
-            </p>
-          </div>
-          <h3>Trailer</h3>
-          <div class="video">
-            <iframe
-              src="https://www.youtube.com/embed/CvCzYbVei04"
-              title='Kisah Karakter - "Zhongli: Biaya Tambahan" | Genshin Impact'
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen
-            ></iframe>
-          </div>
-        </section>
-      </article>
-      <article class="raiden" id="raiden">
-        <section class="figure-raiden">
-          <div class="image-character">
-            <img src="image/raiden.png" alt="raiden" srcset="" />
-          </div>
-          <div class="raiden-name">
-            <h3>Raiden Shogun</h3>
-            <div class="raiden-title"><p>Plane of Euthymia</p></div>
-            <p>Her Excellency, the Almighty Narukami Ogosho, who promised the people of Inazuma an unchanging Eternity.</p>
-          </div>
-        </section>
-        <section class="details-raiden">
-          <h3 class="raiden-ideal">God of Eternity</h3>
-          <div class="desc">
-            <p>Known As</p>
-            <div class="known-raiden">
-              <p>Beelzebul</p>
-              <p>Raiden Ei</p>
-              <p>Narukami Ogosho</p>
-              <p>Master of the Euthymic Plane</p>
-              <p>The Almighty Shogun</p>
-              <p>The Immortal Shogun</p>
-            </div>
-          </div>
-          <h3>Introduction</h3>
-          <div class="intro-raiden">
-            <p>
-              The Raiden Shogun is the awesome and terrible power of thunder incarnate, the exalted ruler of the Inazuma Shogunate. With the might of
-              lightning at her disposal, she commits herself to the solitary pursuit of eternity.
-            </p>
-            <p>
-              <em>
-                "The Raiden Shogun is comprised of two beings in one body: <strong>Ei</strong>, the current Electro Archon of Inazuma; and
-                <strong>The Shogun</strong>, the puppet created by Ei to act as the ruler of Inazuma in her stead."
-              </em>
-            </p>
-          </div>
-          <h3>Trailer</h3>
-          <div class="video">
-            <iframe
-              src="https://www.youtube.com/embed/ydPqFAEgHzs"
-              title='Kisah Karakter: "Raiden Shogun — Mimpi Buruk" | Genshin Impact'
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen
-            ></iframe>
-          </div>
-        </section>
-      </article>
-      <article class="nahida" id="nahida">
-        <section class="figure-nahida">
-          <div class="image-character">
-            <img src="image/nahida.png" alt="nahida" srcset="" />
-          </div>
-          <div class="nahida-name">
-            <h3>Nahida</h3>
-            <div class="nahida-title"><p>Physic of Purity</p></div>
-            <p>A caged bird secluded within the confines of the Sanctuary of Surasthana who can only see the world in her dreams.</p>
-          </div>
-        </section>
-        <section class="details-nahida">
-          <h3 class="nahida-ideal">God of Wisdom</h3>
-          <div class="desc-nahida">
-            <p>Known As</p>
-            <div class="known-nahida">
-              <p>Buer</p>
-              <p>Lesser Lord Kusanali</p>
-              <p>The First Akasha Terminal</p>
-              <!-- <p>Blessed One of Wisdom, Mahakusaladhamma</p> -->
-            </div>
-          </div>
-          <h3>Introduction</h3>
-          <div>
-            <p>
-              Lesser Lord Kusanali dwells deep in the Sanctuary of Surasthana, and has never really been in the limelight, nor has she even been
-              mentioned much. Her burden is heavy, but though she may experience loneliness, and though darkness is all she sees before her, she will
-              not stop moving forward.
-            </p>
-          </div>
-          <h3>Trailer</h3>
-          <div class="video">
-            <iframe
-              src="https://www.youtube.com/embed/DWlWuVU4ZiI"
-              title='Kisah Karakter: "Nahida — Selamat Ulang Tahun" | Genshin Impact'
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen
-            ></iframe>
-          </div>
-        </section>
-      </article>
-      <aside>
-        <article class="aside">
-          <figure class="figure-genshin">
-            <img src="image/genshin_impact_logo.png" alt="logo" srcset="" />
-            <figcaption>Genshin Impact</figcaption>
-          </figure>
-          <div class="table">
-            <div class="table-desc">
-              <p><b>Developer</b></p>
-              <div><p>HoyoVerse</p></div>
-            </div>
-            <div class="table-desc">
-              <p><b>Publisher</b></p>
-              <div>
-                <p>HoyoVerse</p>
-                <p>Cognosphere Pte. Ltd.</p>
+          </section>
+          <section class="details-venti">
+            <h3 class="venti-ideal">God of Freedom</h3>
+            <div class="desc">
+              <p>Known As</p>
+              <div class="known-venti">
+                <p>Barbatos</p>
+                <p>Lord Barbatos</p>
+                <p>Singer of The Skyward Sonnets</p>
               </div>
             </div>
-            <div class="table-desc">
-              <p><b>Producer</b></p>
-              <div><p>Cai Haoyu</p></div>
+            <h3>Introduction</h3>
+            <div>
+              <p>
+                A bard that seems to have arrived on some unknown wind — sometimes sings songs as old as the hills, and other times sings poems fresh
+                and new. Likes apples and lively places but is not a fan of cheese or anything sticky. When using his Anemo power to control the wind,
+                it often appears as feathers, as he's fond of that which appears light and breezy.
+              </p>
             </div>
-            <div class="table-desc">
-              <p><b>Komposer</b></p>
-              <div>
-                <p>Yu-Peng Chen</p>
-                <p>Dimeng Yuan</p>
-                <p>Qian Ding</p>
-                <p>Yijun Jiang</p>
-                <p>Xin Zhao</p>
-                <p>Archangelo Chen</p>
-                <p>Peijia You</p>
-              </div>
+            <h3>Trailer</h3>
+            <div class="video">
+              <iframe
+                src="https://www.youtube.com/embed/M9kQP-cmipY"
+                title="Character Teaser: The Four Winds (English Version) | Genshin Impact"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
             </div>
-            <div class="table-desc">
-              <p><b>Engine</b></p>
-              <div><p>Unity</p></div>
-            </div>
-            <div class="table-desc">
-              <p><b>Platform</b></p>
-              <div>
-                <p>Windows</p>
-                <p>Android</p>
-                <p>iOS</p>
-                <p>PS4</p>
-                <p>PS5</p>
-              </div>
-            </div>
-            <div class="table-desc">
-              <p><b>Release</b></p>
-              <div><p>September 28, 2020</p></div>
-            </div>
-            <div class="table-desc">
-              <p><b>Genre</b></p>
-              <div><p>Action-RPG</p></div>
-            </div>
-          </div>
+          </section>
         </article>
-      </aside>
+        <article class="zhongli" id="zhongli">
+          <section class="figure-zhongli">
+            <div class="image-character">
+              <img src="image/zhongli.png" alt="zhongli" srcset="" />
+            </div>
+            <div class="zhongli-name">
+              <h3>Zhongli</h3>
+              <div class="zhongli-title"><p>Vago Mundo</p></div>
+              <p>A mysterious expert contracted by the Wangsheng Funeral Parlor. Extremely knowledgeable in all things.</p>
+            </div>
+          </section>
+          <section class="details-zhongli">
+            <h3 class="zhongli-ideal">God of Contract</h3>
+            <div class="desc-zhongli">
+              <p>Known As</p>
+              <div class="known-zhongli">
+                <p>Morax</p>
+                <p>Wangsheng Funeral Parlor Consultant</p>
+              </div>
+            </div>
+            <h3>Introduction</h3>
+            <div>
+              <p>
+                Wangsheng Funeral Parlor's mysterious consultant. Handsome, elegant, and surpassingly learned. Though no one knows where Zhongli is
+                from, he is a master of courtesy and rules. From his seat at Wangsheng Funeral Parlor, he performs all manner of rituals.
+              </p>
+            </div>
+            <h3>Trailer</h3>
+            <div class="video">
+              <iframe
+                src="https://www.youtube.com/embed/CvCzYbVei04"
+                title='Kisah Karakter - "Zhongli: Biaya Tambahan" | Genshin Impact'
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
+            </div>
+          </section>
+        </article>
+        <article class="raiden" id="raiden">
+          <section class="figure-raiden">
+            <div class="image-character">
+              <img src="image/raiden.png" alt="raiden" srcset="" />
+            </div>
+            <div class="raiden-name">
+              <h3>Raiden Shogun</h3>
+              <div class="raiden-title"><p>Plane of Euthymia</p></div>
+              <p>Her Excellency, the Almighty Narukami Ogosho, who promised the people of Inazuma an unchanging Eternity.</p>
+            </div>
+          </section>
+          <section class="details-raiden">
+            <h3 class="raiden-ideal">God of Eternity</h3>
+            <div class="desc">
+              <p>Known As</p>
+              <div class="known-raiden">
+                <p>Beelzebul</p>
+                <p>Raiden Ei</p>
+                <p>Narukami Ogosho</p>
+                <p>Master of the Euthymic Plane</p>
+                <p>The Almighty Shogun</p>
+                <p>The Immortal Shogun</p>
+              </div>
+            </div>
+            <h3>Introduction</h3>
+            <div class="intro-raiden">
+              <p>
+                The Raiden Shogun is the awesome and terrible power of thunder incarnate, the exalted ruler of the Inazuma Shogunate. With the might
+                of lightning at her disposal, she commits herself to the solitary pursuit of eternity.
+              </p>
+              <p>
+                <em>
+                  "The Raiden Shogun is comprised of two beings in one body: <strong>Ei</strong>, the current Electro Archon of Inazuma; and
+                  <strong>The Shogun</strong>, the puppet created by Ei to act as the ruler of Inazuma in her stead."
+                </em>
+              </p>
+            </div>
+            <h3>Trailer</h3>
+            <div class="video">
+              <iframe
+                src="https://www.youtube.com/embed/ydPqFAEgHzs"
+                title='Kisah Karakter: "Raiden Shogun — Mimpi Buruk" | Genshin Impact'
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
+            </div>
+          </section>
+        </article>
+        <article class="nahida" id="nahida">
+          <section class="figure-nahida">
+            <div class="image-character">
+              <img src="image/nahida.png" alt="nahida" srcset="" />
+            </div>
+            <div class="nahida-name">
+              <h3>Nahida</h3>
+              <div class="nahida-title"><p>Physic of Purity</p></div>
+              <p>A caged bird secluded within the confines of the Sanctuary of Surasthana who can only see the world in her dreams.</p>
+            </div>
+          </section>
+          <section class="details-nahida">
+            <h3 class="nahida-ideal">God of Wisdom</h3>
+            <div class="desc-nahida">
+              <p>Known As</p>
+              <div class="known-nahida">
+                <p>Buer</p>
+                <p>Lesser Lord Kusanali</p>
+                <p>The First Akasha Terminal</p>
+                <!-- <p>Blessed One of Wisdom, Mahakusaladhamma</p> -->
+              </div>
+            </div>
+            <h3>Introduction</h3>
+            <div>
+              <p>
+                Lesser Lord Kusanali dwells deep in the Sanctuary of Surasthana, and has never really been in the limelight, nor has she even been
+                mentioned much. Her burden is heavy, but though she may experience loneliness, and though darkness is all she sees before her, she
+                will not stop moving forward.
+              </p>
+            </div>
+            <h3>Trailer</h3>
+            <div class="video">
+              <iframe
+                src="https://www.youtube.com/embed/DWlWuVU4ZiI"
+                title='Kisah Karakter: "Nahida — Selamat Ulang Tahun" | Genshin Impact'
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
+            </div>
+          </section>
+        </article>
+        <aside>
+          <article class="aside">
+            <figure class="figure-genshin">
+              <img src="image/genshin_impact_logo.png" alt="logo" srcset="" />
+              <figcaption>Genshin Impact</figcaption>
+            </figure>
+            <div class="table">
+              <div class="table-desc">
+                <p><b>Developer</b></p>
+                <div><p>HoyoVerse</p></div>
+              </div>
+              <div class="table-desc">
+                <p><b>Publisher</b></p>
+                <div>
+                  <p>HoyoVerse</p>
+                  <p>Cognosphere Pte. Ltd.</p>
+                </div>
+              </div>
+              <div class="table-desc">
+                <p><b>Producer</b></p>
+                <div><p>Cai Haoyu</p></div>
+              </div>
+              <div class="table-desc">
+                <p><b>Komposer</b></p>
+                <div>
+                  <p>Yu-Peng Chen</p>
+                  <p>Dimeng Yuan</p>
+                  <p>Qian Ding</p>
+                  <p>Yijun Jiang</p>
+                  <p>Xin Zhao</p>
+                  <p>Archangelo Chen</p>
+                  <p>Peijia You</p>
+                </div>
+              </div>
+              <div class="table-desc">
+                <p><b>Engine</b></p>
+                <div><p>Unity</p></div>
+              </div>
+              <div class="table-desc">
+                <p><b>Platform</b></p>
+                <div>
+                  <p>Windows</p>
+                  <p>Android</p>
+                  <p>iOS</p>
+                  <p>PS4</p>
+                  <p>PS5</p>
+                </div>
+              </div>
+              <div class="table-desc">
+                <p><b>Release</b></p>
+                <div><p>September 28, 2020</p></div>
+              </div>
+              <div class="table-desc">
+                <p><b>Genre</b></p>
+                <div><p>Action-RPG</p></div>
+              </div>
+            </div>
+          </article>
+        </aside>
+      </section>
     </main>
     <footer>
       <div class="about">
