--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
             <h3>Trailer</h3>
             <div class="video">
               <iframe
-                src="https://www.youtube.com/embed/M9kQP-cmipY"
-                title="Character Teaser: The Four Winds (English Version) | Genshin Impact"
+                src="https://www.youtube.com/embed/TSsWsCdiiPI"
+                title='Demo Karakter — "Venti: Windborne Bard" (Versi Inggris) | Genshin Impact'
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen
@@ -159,8 +159,8 @@
             <h3>Trailer</h3>
             <div class="video">
               <iframe
-                src="https://www.youtube.com/embed/CvCzYbVei04"
-                title='Kisah Karakter - "Zhongli: Biaya Tambahan" | Genshin Impact'
+                src="https://www.youtube.com/embed/4oBpaBEMBIM"
+                title='Demo Karakter — "Zhongli: Pendengar Kisah" | Genshin Impact'
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen
@@ -208,8 +208,8 @@
             <h3>Trailer</h3>
             <div class="video">
               <iframe
-                src="https://www.youtube.com/embed/ydPqFAEgHzs"
-                title='Kisah Karakter: "Raiden Shogun — Mimpi Buruk" | Genshin Impact'
+                src="https://www.youtube.com/embed/mvrW4aKwAXw"
+                title='Demo Karakter — "Raiden Shogun: Penghakiman Euthymia" | Genshin Impact'
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen
@@ -250,14 +250,29 @@
             <h3>Trailer</h3>
             <div class="video">
               <iframe
-                src="https://www.youtube.com/embed/DWlWuVU4ZiI"
-                title='Kisah Karakter: "Nahida — Selamat Ulang Tahun" | Genshin Impact'
+                src="https://www.youtube.com/embed/dpZhGzZ3hNc"
+                title="Demo Karakter — Nahida: Tanpa Batas, Tanpa Cemas | Genshin Impact"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen
               ></iframe>
             </div>
           </section>
+        </article>
+        <article class="furina" id="furina">
+          <p>Coming Soon Hydro Archon <strong>Focalor</strong></p>
+          <h3>God of Justice</h3>
+          <iframe
+            src="https://www.youtube.com/embed/aau-c8l5z9c"
+            title='Kisah Karakter: "Furina — Pemeran di Atas Panggung" | Genshin Impact'
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
+          <div>
+            <h3>Furina</h3>
+            <p>Endless Solo of Solitude</p>
+          </div>
         </article>
         <aside>
           <article class="aside">
