--- a/index.html
+++ b/index.html
@@ -8,40 +8,44 @@
   </head>
   <body>
     <header>
-      <div class="title">
-        <h1>
-          The Seven Archons <br />
-          of Teyvat
-        </h1>
-        <p>
-          Typically shortened to The Seven, are the seven gods who preside over the seven regions of Teyvat, established after seven gods emerged as
-          the victors of the Archon War 2,000 years ago.
-        </p>
-        <div class="view">
-          <a href="#element">View More</a>
+      <section class="hero">
+        <div class="title">
+          <h1>
+            The Seven Archons <br />
+            of Teyvat
+          </h1>
+          <p>
+            Typically shortened to The Seven, are the seven gods who preside over the seven regions of Teyvat, established after seven gods emerged as
+            the victors of the Archon War 2,000 years ago.
+          </p>
+          <div class="view">
+            <a href="#element">View More</a>
+          </div>
         </div>
-      </div>
-      <div class="paimon">
-        <img src="/image/paimon.png" alt="" srcset="" />
-      </div>
+        <div class="paimon">
+          <img src="/image/paimon.png" alt="paimon" srcset="" />
+        </div>
+      </section>
+      <section class="nav">
+        <nav id="nav">
+          <ul class="navbar-responsive">
+            <li>
+              <p>The Seven</p>
+            </li>
+            <li>
+              <button id="toggle-button"><i class="fa-solid fa-caret-down"></i></button>
+            </li>
+          </ul>
+          <ul class="navbar">
+            <li><a href="#venti">Barbatos</a></li>
+            <li><a href="#zhongli">Morax</a></li>
+            <li><a href="#raiden">Beelzebul</a></li>
+            <li><a href="#nahida">Buer</a></li>
+            <li><a href="#furina">Focalor</a></li>
+          </ul>
+        </nav>
+      </section>
     </header>
-    <nav id="nav">
-      <ul class="navbar-responsive">
-        <li>
-          <p>The Seven</p>
-        </li>
-        <li>
-          <button id="toggle-button"><i class="fa-solid fa-caret-down"></i></button>
-        </li>
-      </ul>
-      <ul class="navbar">
-        <li><a href="#venti">Barbatos</a></li>
-        <li><a href="#zhongli">Morax</a></li>
-        <li><a href="#raiden">Beelzebul</a></li>
-        <li><a href="#nahida">Buer</a></li>
-        <li><a href="#furina">Focalor</a></li>
-      </ul>
-    </nav>
     <main>
       <article class="archon-element" id="element">
         <h2>Archons Elements</h2>
