Update (Add new released character, Furina)

--- a/index.html
+++ b/index.html
@@ -264,19 +264,56 @@
           </section>
         </article>
         <article class="furina" id="furina">
-          <p>Coming Soon Hydro Archon <strong>Focalor</strong></p>
-          <h3>God of Justice</h3>
-          <iframe
-            src="https://www.youtube.com/embed/aau-c8l5z9c"
-            title='Kisah Karakter: "Furina — Pemeran di Atas Panggung" | Genshin Impact'
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-          ></iframe>
-          <div>
-            <h3>Furina</h3>
-            <p>Endless Solo of Solitude</p>
-          </div>
+          <section class="figure-furina">
+            <div class="image-character">
+              <img src="image/furina.png" alt="furina" srcset="" />
+            </div>
+            <div class="furina-name">
+              <h3>Furina</h3>
+              <div class="furina-title"><p>Endless Solo of Solitude</p></div>
+              <p>Her Excellency, the Almighty Narukami Ogosho, who promised the people of Inazuma an unchanging Eternity.</p>
+            </div>
+          </section>
+          <section class="details-furina">
+            <h3 class="furina-ideal">God of Justice</h3>
+            <div class="desc">
+              <p>Known As</p>
+              <div class="known-furina">
+                <p>Focalor</p>
+                <p>Lady Furina</p>
+                <p>Furina de Fontaine</p>
+                <p>Regina of All Waters, Kindreds, Peoples and Laws</p>
+              </div>
+            </div>
+            <h3>Introduction</h3>
+            <div class="intro-furina">
+              <p>
+                The "Regina of All Waters, Kindreds, Peoples and Laws" is deeply loved by her people. She follows each and every trial held at the
+                Opera Epiclese with an inextinguishable passion, and is always acutely aware of how the "audience" sees things.
+              </p>
+              <p>
+                <em>
+                  "Furina is not considered an Archon, as she did not carry any of the divinity of Focalors and was fully human. This is further
+                  indicated by the conversation between Focalors and Furina shown in
+                  <strong
+                    ><a href="https://genshin-impact.fandom.com/wiki/The_Opera_of_Noirceur_and_Blancheur"
+                      >The Opera of Noirceur and Blancheur</a
+                    ></strong
+                  >, in which Focalors tasks Furina with pretending to be a god without being one or attempting to become one"
+                </em>
+              </p>
+            </div>
+            <h3>Trailer</h3>
+            <div class="video">
+              <iframe
+                src="https://www.youtube.com/embed/EN79SfbcvIE"
+                title='Demo Karakter — "Furina: Dunia Adalah Panggung Sandiwara" | Genshin Impact'
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
+            </div>
+          </section>
         </article>
         <aside>
           <article class="aside">
